tests/errors/pp-unsolved-defined-3.h
#if defined FOO && FOO == 123
#endif
extern short separator6;
